-QA: More animations and correction to CSS. -QA: Rough in concept of tab's in host edit -QA: Rework the Host Availability Status, make expandable collapsable -QA: Concept of "Meta Data" -QA: Make the twisty's appear a little more appealing -QA: Adjust header tab to not show breaks during zoom operations on the page

--- a/cacti/branches/main/include/main.css
+++ b/cacti/branches/main/include/main.css
@@ -48,7 +48,7 @@ td {
 
 #navbrcrumb div {
 	background: #363636 url('../images/navbar.png') repeat-x scroll top left;
-	padding:0.2em 5pt 0.2pt 5px;
+	padding:0.6em 5pt 0.2pt 5px;
 	text-align:center;
 }
 
@@ -67,7 +67,7 @@ td {
 	position: fixed;
 	overflow: auto;
 	left: 0px;
-	top: 4.6em;
+	top: 5.3em;
 	width: 100%;
 	height: 98%;
 }
@@ -96,7 +96,7 @@ td {
 #content {
 	background: #FFFFFF url('../images/shadow.gif') repeat-x scroll top left;
 	position: fixed;
-	top: 4.6em;
+	top: 5.3em;
 	overflow: auto;
 	overflow-x: hidden;
 	margin-right: 0px;
@@ -112,7 +112,7 @@ td {
 	background: #FEFEFE url('../images/shadow.gif') repeat-x scroll top left;
 	float: left;
 	position: fixed;
-	top: 4.6em;
+	top: 5.3em;
 	left: 0;
 	overflow: auto;
 	padding-top: 0px;
@@ -127,7 +127,7 @@ td {
 	background: #FFFFFF url('../images/shadow.gif') repeat-x scroll top right;
 	float: none;
 	position: fixed;
-	top: 4.6em;
+	top: 5.3em;
 	overflow: auto;
 	margin-right: 0px;
 	padding-top: 8px;
@@ -142,7 +142,7 @@ td {
 	background: #FFFFFF url('../images/shadow.gif') repeat-x scroll top right;
 	float: none;
 	position: fixed;
-	top: 4.6em;
+	top: 5.3em;
 	left: 0;
 	overflow: auto;
 	margin-right: 8px;
@@ -159,7 +159,7 @@ td {
 	background: #F5F5F5 url('../images/shadow.gif') repeat-x scroll top left;
 	float: left;
 	position: fixed;
-	top: 4.6em;
+	top: 5.3em;
 	left: 0;
 	overflow: auto;
 	padding-top: 0px;
@@ -221,7 +221,6 @@ td {
 #header {
 	background-color: #363636;
 	position: fixed;
-	line-height: 1.5em;
 	width: 100%;
 	top: 0px;
 	left: 0px;
@@ -237,10 +236,7 @@ td {
 	top: 0px; left: 0px;
 	padding: 0;
 	border-bottom: 2px solid #6ea533;
-	font-family: Arial, Verdana, Helvetica, sans-serif;
-	height: 5.2em;
-	font-weight: bold;
-//	font-size: 10px;
+	height: 6em;
 	font-size:100%;
 }
 
@@ -258,9 +254,9 @@ td {
 #header div#navbar_l ul a {
 	float: left;
 	display: block;
-	padding: 7px 2px 5px 7px;
+	padding: 7px 2px 3px 7px;
 	background: transparent url("../images/header_tab.gif") 0% -200px no-repeat;
-	font-size: 10pt;
+	font-size: 12pt;
 	letter-spacing: 0.2px;
 	color: #fff;
 	text-decoration: none;
@@ -286,9 +282,9 @@ td {
 #header div#navbar_r ul a {
 	float: left;
 	display: block;
-	padding: 7px 2px 5px 7px;
+	padding: 7px 2px 3px 7px;
 	background: transparent url("../images/header_tab.gif") 0% -200px no-repeat;
-	font-size: 10pt;
+	font-size: 12pt;
 	letter-spacing: 0.2px;
 	color: #fff;
 	text-decoration: none;
@@ -299,6 +295,11 @@ td {
 	background: transparent url("../images/header_tab.gif") 100% -200px no-repeat;
 	padding: 0px 6px 0 0;
 	margin: 0 2px 0 0;
+}
+
+#header div#navbar_r ul a img {
+	margin: 0px 0px 2px 0px;
+	border: 0px;
 }
 
 #header div#navbar li.selected { background-position: 100% 0; }
@@ -528,10 +529,10 @@ table.resizable th {
 	display:block;
 	float:left;
 	margin-right: 4px;
-	font-size:10px;
+	font-size:13px;
 	font-weight: bold;
-	height:10px;
-	line-height:10px;
+	height:14px;
+	line-height:16px;
 	text-decoration: none;
 	padding:3px 15px 5px 14px;
 	background: transparent url('../images/tabSelected.png') repeat-x scroll left top;
@@ -544,10 +545,10 @@ table.resizable th {
 	display:block;
 	float:left;
 	margin-right: 4px;
-	font-size:10px;
+	font-size:13px;
 	font-weight: bold;
-	height:10px;
-	line-height:10px;
+	height:14px;
+	line-height:16px;
 	text-decoration: none;
 	padding:3px 15px 5px 14px;
 	background: transparent url('../images/tabDefault.png') repeat-x scroll left top;
